# ha-historical-sensor

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  ha-historical-sensor.sublime-project  hacs.json  pyproject.toml  setup.cfg
.github/workflows/: codeql-analysis.yml  pre-commit.yml  publish.yml  python-publish.yml  release.yml
config/: configuration.yaml
config/custom_components/: delorian
config/custom_components/delorian/: api.py  const.py  statistics.py
custom_components/delorian/: __init__.py  api.py  config_flow.py  const.py  entity.py  manifest.json  sensor.py
homeassistant_historical_sensor/: __init__.py  consts.py  helpers.py  patches.py  recorderutil.py  sensor.py  state.py  timemachine.py  util.py
