# https://packaging.python.org/tutorials/packaging-projects/

[project]
name = "homeassistant-historical-sensor"
version = "3.0.0a3"
dependencies = [
    "importlib-metadata; python_version >= '3.13'",
]
authors = [
  {name = "Luis López", email = "luis@cuarentaydos.com"},
]
readme = "README.md"
description ="Historical sensors for HomeAssistant"
license-files = [ "LICENSE" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13.2"

[project.urls]
Homepage = "https://github.com/ldotlopez/ha-historical-sensor"
Issues = "https://github.com/ldotlopez/ha-historical-sensor/issues"
Repository = "https://github.com/ldotlopez/ha-historical-sensor.git"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[bdist_wheel]
universal = 1

[tool.black]
target-version = ['py313']

[tool.isort]
profile = "black"

[tool.mypy]
files = ['homeassistant_historical_sensor']

[tool.pyupgrade]
addopts = "--py313-plus"

[tool.setuptools]
packages = ["homeassistant_historical_sensor"]

[dependency-groups]
dev = [
    "homeassistant>=2025.12.0",
    "ipdb>=0.13.13",
    "ipython>=9.8.0",
    "pre-commit>=4.5.1",
    "turbojpeg>=0.0.2",
]
