# https://packaging.python.org/tutorials/packaging-projects/

[project]
name = "homeassistant-historical-sensor"
version = "3.0.0a5"
dependencies = [
    "importlib-metadata; python_version >= '3.14'",
]
authors = [
  {name = "Luis López", email = "luis@cuarentaydos.com"},
]
readme = "README.md"
description ="Historical sensors for HomeAssistant"
license-files = [ "LICENSE" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.14"

[project.urls]
Homepage = "https://github.com/ldotlopez/ha-historical-sensor"
Issues = "https://github.com/ldotlopez/ha-historical-sensor/issues"
Repository = "https://github.com/ldotlopez/ha-historical-sensor.git"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[bdist_wheel]
universal = 1

[tool.black]
target-version = ['py314']

[tool.isort]
profile = "black"

[tool.pyupgrade]
addopts = "--py314-plus"

[tool.setuptools]
packages = ["homeassistant_historical_sensor"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "homeassistant>=2026.2.3",
    "ipdb>=0.13.13",
    "ipython>=9.8.0",
    "pre-commit>=4.5.1",
    "pyupgrade>=3.21.2",
]
