[metadata]
name = homeassistant-historical-sensor
version = 0.1.0a0
author = Luis López
author_email = luis@cuarentaydos.com
description = Historical sensors for HomeAssistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ldotlopez/ha-historical-sensor
project_urls =
    Repository = https://github.com/ldotlopez/ha-historical-sensor/
    Bug Tracker = https://github.com/ldotlopez/ha-historical-sensor/issues


[options]
package_dir =
    homeassistant-historical-sensor = homeassistant_historical_sensor
packages = find:
python_requires = >=3.9


[options.packages.find]
where =
